# data-detective

./: .gitignore  CLAUDE.md  README.md  RENDER_DEPLOYMENT.md  render.yaml
backend/: .env.example  .env.production.example  ANALYTICS.md  CLAUDE.md  DATABASE.md  README.md  alembic.ini  pyproject.toml  test_custom_challenges.py
backend/alembic/: env.py
backend/alembic/versions/: d146e5ef0e6b_initial_migration_with_all_tables.py
backend/app/: auth.py  challenges.py  database.py  logging_config.py  main.py  models.py  schemas.py  validation.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/routes/: analytics.py  auth.py  bulk_import.py  challenges.py  custom_challenges.py  datasets.py  export.py  hints.py  leaderboard.py  marketing.py  progress.py  reports.py  users.py
backend/app/static/: robots.txt
backend/app/static/css/: marketing.css
backend/app/static/images/: README.md
backend/app/templates/: about.html  base.html  contact.html  cookie-banner.html  features.html  home.html  landing.html  pricing.html  privacy.html  terms.html
backend/scripts/: backup.sh  restore.sh  seed.py
backend/tests/: test_auth.py  test_challenges.py  test_class_analytics.py  test_export.py  test_hints.py  test_import.py  test_integration.py  test_leaderboard.py  test_main.py  test_models.py  test_password_reset.py  test_progress.py  test_progress_routes.py  test_refresh_tokens.py  test_reports.py  test_student_detail.py  test_users.py  test_validation.py
docs/: API.md  ARCHITECTURE.md  BACKUP_VERIFICATION.md  CI_CD.md  COMPONENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  ENV_VARIABLES.md  LAUNCH_CHECKLIST.md  MONITORING.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT_GUIDE.md
frontend/: .env.example  .env.production.example  .gitignore  E2E_TESTS_SUMMARY.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
(+107 files in other folders)
