[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Data Detective SQL Learning Academy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.0.0",
    "alembic>=1.17.1",
    "bcrypt>=4.3.0,<5.0",
    "email-validator>=2.3.0",
    "fastapi>=0.120.4",
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "sqlparse>=0.5.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
    "sqlite-web>=0.6.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
